# load-forecast

./: .gitignore  01_eda.py  01_eda_data_info.py  02_create_features.py  02_eda_timeseries.py  03_analysis_features.py  README.md  dvc.yaml  pyproject.toml
jobs/: 02_create_features.py  03_fit_xgboost.py  04_train_models_jan_nov_dec.py  05_train_models_quarterly.py  06_multi_horizon_quarterly.py  06_train_models_quarterly.py  07_tabpfn_xgboost_multi_horizon.py  08_multi_horizon_quarterly.py  10_tabpfn_xgboost.py
reports/: dvc.yaml  eda.html  eda.md  eda_data_info.html  eda_data_info.ipynb  eda_data_info.md  eda_timeseries.html  eda_timeseries.ipynb  eda_timeseries.md
reports/html/: 01_eda.html  03_analyse_features.html  03_analysis_features.html  04_train_models_jan_nov_dec.html  05_evaluate_models_jan_nov_dec.html  05_train_models_quarterly.html  06_multi_horizon_quarterly.html  06_train_models_quarterly.html  07_evaluate_models_quarterly.html  08_multi_horizon_quarterly.html  09_evaluate_multi_horizon_quarterly.html
reports/markdown/: 01_eda.md  03_analyse_features.md  03_analysis_features.md  04_train_models_jan_nov_dec.md  05_evaluate_models_jan_nov_dec.md  05_train_models_quarterly.md  06_multi_horizon_quarterly.md  06_train_models_quarterly.md  07_evaluate_models_quarterly.md  (+2 more)
reports_src/: 01_eda.py  03_analyse_features.py  03_analysis_features.py  05_evaluate_models_jan_nov_dec.py  07_evaluate_models_quarterly.py  09_evaluate_multi_horizon_quarterly.py  11_evaluation_tabpfn_xgboost.py  12_feature_importance.py
tools/: generate_report.sh
(+3 files in other folders)
